2009-03-23  Al Riddoch  <alriddoch@googlemail.com>

	* Makefile.am: Don't install doc files. Just not needed.

	* mingw32-varconf.spec.in, configure.ac: Add a spec file for windows
	  build using mingw.

2009-03-23  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Update the version to 0.6.6.

	* NEWS: Update for release.

	* varconf.spec.in: Fix the packager email address.

	* Release 0.6.6. Interface version 6.0.0.

2008-11-18  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Use LIBS as it should be, not LDFLAGS.

2008-11-08  Al Riddoch  <alriddoch@zepler.org>

	* varconf/config.cpp: Clean up parentheses. Change the type of an
	  iterator to int, otherwise it causes warnings.

2008-11-07  Al Riddoch  <alriddoch@zepler.org>

	* varconf/config.cpp: Fix really horribly broken code which was
	  checking whether a char * was equal to "".

2008-11-07  Al Riddoch  <alriddoch@zepler.org>

	* varconf/config.h: Merge the old content of Config.h into the lower
	  case file to get rid of the case clash on MacOS.

	* varconf/config.cpp, varconf/dyntypes.cpp, varconf/varconf.h:
	  Include config.h with the lower case filename.

2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>

	* Fixing library to compile under GCC 4.3.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.5. Interface version 6.0.0.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* varconf.spec.in: Tweak the rpm spec a little.

2007-01-13  Al Riddoch  <alriddoch@zepler.org>

	* tests/conftest.cpp: Add assert include missing from the test that
	  uses assert.

2007-01-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number. Remove conflicts, as
	  we don't really have a conflict.

	* varconf-1.0.pc.in: Don't conflict with earlier versions of sigc++.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* varconf/Config.h, varconf/config.cpp, varconf/dynbase.cpp,
	  varconf/dynbase.h, varconf/dyncmp.cpp, varconf/dyncmp.h,